--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,11 @@
 # domoticz-dds238 plugin
 
-2024-05-02 v1.1
+2024-07-02 Rev.2.0
+Changed class to use the DomoticzEx model instead of Domoticz. Requires
+Domoticz version 2022.1 or later.
+
+2024-05-02 Rev.1.1
 Added the net energy / power meter, computing the Imported energy - Exported energy
 
-2024-01-29 v1.0
+2024-01-29 Rev.1.0
 First version
